--- a/index.html
+++ b/index.html
@@ -4,7 +4,78 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle Nav</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" target="_blank">Gunnar Erickson</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container-fluid" id="home">
+    <h1 draggable="true" title="Title">Digital Design</h1>
+    <h2 style="color:orange; text-shadow:#000 0px 1px 3px" class="blinky">take a look</h2>
+    <div id="line"></div>
+    <div id="btns">
+        <a href="https://www.instagram.com/gundogmillionaire">
+            <button class="btn btn-primary"><span class="fa fa-instagram"></span> Instagram</button>
+        </a>
+        <button class="btn btn-danger"><span class="fa fa-fire"></span> CodeCamp</button>
+        <button class="btn btn-info"><span class="fa fa-github"></span> GitHub</button>
+    </div>
+</div>
+<div class="container-fluid" id="about">
+    <div class="col-md-6">
+        <h2 id="head"> Gunnar Erickson </h2>
+        <p id="info">Electro-Mechanical Engineering student studying at Wentworth Institute of Technology in Boston, USA. Graphic Design, Web-Development and Programming are interests outside of my studies. </br><b> My passion is to blend Design with Engineering, developing simple solutions to complex problems.</b></p>
+    </div>
+    <div class="col-md-4 collapse navbar-collapse" id="photo">
+        <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAO5AAAAJDA4Y2E2OWUxLWE0ZWQtNGNmMi04ZjUzLWZhZmRiMDc4NDQwMw.jpg" class="img1" />
+    </div>
+</div>
+<div class="container-fluid" id="portfolio">
+    <h2 class="portfolio"> Portfolio </h2>
+    <div class="img"><img src="#"/>
+    </div>
+</div>
+<div class="container-fluid">
+    <footer>
+        <div class="container-fluid">
+            <ul class="list-inline buffer">
+                <li class="sm-col-4"><a href="#home">Home</a></li>
+                <li class="sm-col-4"><a href="#about">About</a></li>
+                <li class="sm-col-4"><a href="#portfolio">Portfolio</a></li>
+                <li class="sm-col-4"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </footer>
+</div>
 
 </body>
 </html>
