--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.js"></script>
 <script src="/public/scripts/Effects.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
