--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p id="info">Electro-Mechanical Engineering student studying at Wentworth Institute of Technology in Boston, USA. Graphic Design, Web-Development and Programming are interests outside of my studies. </br><b> My passion is to blend Design with Engineering, developing simple solutions to complex problems.</b></p>
     </div>
     <div class="col-md-4 collapse navbar-collapse" id="photo">
-        <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAO5AAAAJDA4Y2E2OWUxLWE0ZWQtNGNmMi04ZjUzLWZhZmRiMDc4NDQwMw.jpg" class="img1" />
+        <img src="./public/images/LinkedIn.png"/>
     </div>
 </div>
 <div class="container-fluid" id="portfolio">
