--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GunnarJE</title>
 </head>
-<link rel="icon" type="image/png" href="favicon.ico"/>
+<link rel="icon" type="image/png" href="/favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu"/>
 <link rel="stylesheet" type="text/css" href="./public/stylesheets/style.css"/>
 <link rel=stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css"/>
@@ -67,7 +67,7 @@
     <div class="col-md-6">
         <h2 id="head"> Gunnar Erickson </h2>
         <p id="info">Electro-Mechanical Engineering student studying at Wentworth Institute of Technology in Boston,
-            USA. Graphic Design, Web-Development and Programming are interests outside of my studies. </br><b> My
+            USA. Graphic Design, Web-Development and Programming are interests outside of my studies. <b> My
                 passion is to blend Design with Engineering, developing simple solutions to complex problems.</b></p>
     </div>
     <div class="col-md-4 collapse navbar-collapse" id="photo">
