--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GunnarJE</title>
 </head>
-<link rel="icon" type="image/png" href="/favicon.ico"/>
+<link rel="icon" type="image/png" href="/public/images/favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu"/>
 <link rel="stylesheet" type="text/css" href="./public/stylesheets/style.css"/>
 <link rel=stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css"/>
